2004-12-16  Raja R Harinath  <rharinath@novell.com>

	New invariant: RootContext.Tree.Types.NamespaceEntry == null
	except when in the parser, and in GlobalAttribute.
	* driver.cs (MainDriver): Reset	RootContext.Tree.Types.NamespaceEntry.
	* attribute.cs (GlobalAttribute.CheckAttributeType): Reset
	RootContext.Tree.Types.NamespaceEntry once work is done.
	(GlobalAttribute.Emit): New.  Wrapper for Attribute.Emit, but sets
	and resets RootContext.Tree.Types.NamespaceEntry.

2004-12-15  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Don't create a block for every variable.

2004-12-14  Miguel de Icaza  <miguel@ximian.com>

	* location.cs: Provide extra information.

	* statement.cs: The instance is not `ldarg_0.THIS' when accessing
	variables from the captured environment, it is the ldarg_0.

2004-12-14  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Changed warning level for 642 to 4 until Miguel
	find a conclusion.
	
	* class.cs: Changed warning level for 169 to avoid developer
	displeasure from warning flooding. It will be changed back when they
	fix most of current BCL warnings.
	
	* RootContext.cs: Pushed default WarningLevel to 3.
	
	* statement.cs: Removed unused variable.

2004-12-14  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (TypeContainer.GetClassBases): Add error 1521 report.
	(TypeContainer.MethodModifiersValid): Refactored to use MemberCore.
	Add error 502 report.
	(StaticClass.DefineType): Add error 441 report.
	(Class.AllowedModifiersProp): New virtual property as temporary
	extension to AllowedModifiers.
	(Class.DefineType): Add error 418 report. Moved ModFlags check here
	to share implementation with StaticClass and don't call virtual
	methods from ctor.
	
	* driver.cs (MainDriver): Add error 1558 test.

	* parameter.cs (Parameter.ApplyAttributeBuilder): Add error 662
	report. Moved error 36 test here.

	* statement.cs (Throw.Resolve): Add error 724 report.

	* typemanager.cs: Add out_attribute_type core type.
	